--- a/paggo_backend/package.json
+++ b/paggo_backend/package.json
@@ -31,6 +31,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "bcrypt": "^6.0.0",
+    "dotenv": "^16.5.0",
     "imagemagick": "^0.1.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
