--- a/paggo_backend/package.json
+++ b/paggo_backend/package.json
@@ -32,12 +32,11 @@
     "@types/passport-local": "^1.0.38",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
-    "imagemagick": "^0.1.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdf-lib": "^1.17.1",
-    "pdf-poppler": "^0.2.1",
+    "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "tesseract.js": "^6.0.1"
