--- a/paggo_backend/package.json
+++ b/paggo_backend/package.json
@@ -32,6 +32,7 @@
     "@types/passport-local": "^1.0.38",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
+    "node-tesseract-ocr": "^2.2.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -39,6 +40,7 @@
     "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.2",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
@@ -52,7 +54,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.15.29",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
